# grpc_messenger

./: .env  .gitignore  Cargo.toml  Readme.md  build.rs  docker-compose.yml  run_console_client.sh  run_messenger_server.sh  run_web_client.sh
proto/: messenger.proto
src/: client.rs  server.rs
web_client/: .env  Dockerfile  docker-compose.yml  envoy.yaml  index.html
web_client/js_scripts/: client.js  package-lock.json  package.json
