[package]
name = "grpc_messanger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "messenger-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "messenger-client"
path = "src/client.rs"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
prost = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11"
